# Scriberr

./: .air.toml  .dockerignore  .env  .gitignore  .golangci.yml  .goreleaser.yaml  .prettierignore  .prettierrc  CLAUDE.md  CNAME  Dockerfile  Dockerfile-cuda128  Dockerfile-gpu  Dockerfile.cuda  Dockerfile.cuda.12.9  Dockerfile.debian  Dockerfile.gpu  Dockerfile.rocm  LICENSE  Makefile  README.md  agent_notes.md  build-rocm.sh  build.sh  capacitor.config.ts  check-env.sh  components.json  dev.sh  diarize.py  docker-compose.blackwell.yml  docker-compose.build.blackwell.yml  docker-compose.build.cuda.yml  docker-compose.build.rocm.yml  docker-compose.build.yml  docker-compose.cuda.yml  docker-compose.dev.cuda.yml  docker-compose.gpu.yml  docker-compose.ollama.yaml  docker-compose.rocm.yml  docker-compose.yaml  (+29 more)
.github/: FUNDING.yml  copilot-instructions.md
.serena/: project.yml
api-docs/: API_DOCS.md  docs.go  swagger.json  swagger.yaml
asr-engines/scriberr-asr-onnx/: Makefile  README.md  pyproject.toml
asr-engines/scriberr-asr-onnx/backup/legacy_20260129/: README.md  bench_core.py  bench_cpu.py  discusssion  transcribe.py  transcribe_wts.py
asr-engines/scriberr-asr-onnx/backup/legacy_20260129/app/: main.py
asr-engines/scriberr-asr-onnx/backup/legacy_20260129/certs/: cert.pem  key.pem
asr-engines/scriberr-asr-onnx/backup/legacy_20260129/scripts/: gen_certs.sh
asr-engines/scriberr-asr-onnx/backup/legacy_20260129/static/: app.js  index.html  styles.css
asr-engines/scriberr-asr-onnx/scripts/: generate_goldens.py
asr-engines/scriberr-asr-onnx/src/asr_engine/: __init__.py  audio_io.py  backend.py  job_runner.py  metrics.py  model_manager.py  params.py  postprocess.py  server.py  status_store.py  timestamps.py
asr-engines/scriberr-asr-onnx/src/asr_engine/proto/: __init__.py
asr-engines/scriberr-asr-onnx/tests/fixtures/expected/: README.md  nemo-canary-1b-v2.txt  nemo-parakeet-tdt-0.6b-v2.txt
asr-engines/scriberr-asr-onnx/tests/integration/: test_grpc_e2e.py
asr-engines/scriberr-asr-onnx/tests/unit/: test_audio_io.py  test_params.py  test_postprocess.py  test_timestamps.py
asr-engines/scriberr-diariz-torch/: Makefile  README.md  pyproject.toml
asr-engines/scriberr-diariz-torch/proto/: asr_engine.proto
asr-engines/scriberr-diariz-torch/src/diar_engine/: __init__.py  backend.py  job_runner.py  metrics.py  model_manager.py  params.py  server.py  status_store.py
asr-engines/scriberr-diariz-torch/src/diar_engine/proto/: __init__.py  asr_engine_pb2.py  asr_engine_pb2_grpc.py
asr-engines/scriberr-diariz-torch/tests/unit/: test_backend_formatting.py  test_params.py
data/: jwt_secret
debugging/: debug-rocm.sh  setup-rocm.sh
devnotes/: engine-worker-sprint-0-inventory.md  engine-worker-sprint-tracker.md  engine-worker-sprints.md  llm-provider-settings-sprint.md
diarize/: diarize.py  local.py
docs/: CNAME  api.html  changelog.html  docs.go  index.html  swagger.json  swagger.yaml
internal/transcription/adapters/py/nvidia/: canary_transcribe.py  parakeet_transcribe.py  parakeet_transcribe_buffered.py  pyproject.toml  sortformer_diarize.py
internal/transcription/adapters/py/nvidia/tests/: test_canary_transcribe.py  test_parakeet_transcribe.py  test_parakeet_transcribe_buffered.py  test_sortformer_diarize.py
internal/transcription/adapters/py/pyannote/: pyannote_diarize.py  pyproject.toml
internal/transcription/adapters/py/pyannote/tests/: test_pyannote_diarize.py
internal/transcription/adapters/py/voxtral/: pyproject.toml  voxtral_transcribe.py  voxtral_transcribe_buffered.py
internal/transcription/assets/: add_diarization.py  diarize_transcript.py  embed.go  pyproject.toml
plans/: macos-desktop-app-plan.md
realtime-transcription/: Dockerfile  Dockerfile.cuda  requirements.txt  server.py
scriberr-backend/: .dockerignore  Dockerfile.alpine  diarize.py  docker-compose.yml  go.mod  go.sum  main.py  pyproject.toml  test_websocket.py
scriberr-backend/cmd/scriberr/: main.go
scriberr-backend/internal/database/: database.go
scriberr-backend/internal/handlers/: auth.go  chat.go  handlers.go  models.go  summarize.go  summary.go  websocket.go  youtube.go  youtube_test.go
scriberr-backend/internal/middleware/: middleware.go
scriberr-backend/internal/models/: models.go
scriberr-backend/internal/summary_tasks/: ollama_client.go  tasks.go
scriberr-backend/internal/tasks/: tasks.go
scriberr-docs/: Dockerfile  docker-compose.yaml  eslint.config.js  package-lock.json  package.json  svelte.config.js
scriberr-frontend/: components.json  eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
scripts/: build-desktop-backend.sh  csvbatch.sh  debug_diarization_clip.py  dev_init.sh  dev_setup_asr_engine.sh  dev_setup_diar_engine.sh  prepare-desktop-tools.sh
speech-recognition/: .npmrc  CHANGELOG.md  CONTRIBUTING.md  CapacitorCommunitySpeechRecognition.podspec  LICENSE  README.md  loggy  package-lock.json  package.json  rollup.config.js  tsconfig.json
src/: app.css  app.d.ts  app.html  hooks.server.ts
static/: fonts.css
tests/: adapter_registration_test.go  api_chat_test.go  api_handlers_test.go  api_summary_test.go  api_test.go  api_user_test.go  auth_service_test.go  auth_test.go  cli_handlers_test.go  database_test.go  llm_test.go  models_test.go  queue_test.go  security_test.go  test_helpers.go  test_queue.db  test_queue_error.db  test_queue_process.db  transcription_service_test.go  transcription_service_test.go.old
whisperlive/: Dockerfile  README.md  docker-compose.yml  install_dependencies.sh  pyproject.toml  requirements.txt  requirements_minimal.txt  requirements_optimized.txt  requirements_streaming.txt  start_server.sh  test_audio_processing.py  test_interface.html  test_min_length.py  test_robust_server.py  test_websocket.html  test_websocket.py  test_whisperlivekit.py  test_whisperlivekit_standalone.py  test_with_speech.py  whisper_streaming_server.py  whisperlive_server.py  whisperlivekit_optimized.py  whisperlivekit_server.py  whisperlivekit_simple.py  whisperlivekit_simple_robust.py
(+1045 files in other folders)
