[project]
name = "scriberr-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "whisperx==3.4.1",
  "yt-dlp>=2025.6.30",
  "whisperlivekit>=0.2.1",
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "websockets>=12.0",
  "python-multipart>=0.0.6",
  "aiofiles>=23.2.1",
  "pyannote.audio>=3.0.0",
  "pyannote.core>=5.0.0",
  "torch>=2.0.0",
  "torchaudio>=2.0.0",
  "numpy>=1.21.0",
  "librosa>=0.10.0",
  "soundfile>=0.12.0",
  "accelerate>=0.20.0",
  "transformers>=4.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "flake8>=6.0.0",
]
