[project]
name = "whisperlive"
version = "0.1.0"
description = "Live transcription server using faster-whisper and streaming"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn",
  "websockets",
  "faster-whisper",
  "numpy",
  "librosa",
  "soundfile",
  "pydub",
  "python-multipart",
  "whisperlivekit>=0.2.1",
  "torch>=2.7.1",
  "mosestokenizer>=1.2.1",
  "wtpsplit>=2.1.6",
]
