[project]
name = "scriberr-whisperx"
version = "0.1.0"
description = "Embedded environment for Scriberr WhisperX + diarization"
requires-python = ">=3.9,<3.13"
dependencies = [
  "whisperx",
  "torch",
  "torchaudio",
  "numpy",
  "pandas",
  "pyannote.audio",
  "faster-whisper",
  "yt-dlp",
]

[tool.uv]
dev-dependencies = []
